# CapitalGains

./: .env.template  .gitignore  BrokerWiseSplitUp.ipynb  README.md  capitalgains.py  dates.py  main.py  notes.md  process.py  pyproject.toml  scraper.py  sheets.py
tests/: download_cii.py  download_currency.py  download_splits.py  download_transaction_history.py  gains.py
